kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: danesjenovdan
spec:
  selector:
    app: danesjenovdan
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: danesjenovdan-nginx
spec:
  selector:
    app: danesjenovdan
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
