kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: danesjenovdan
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - danesjenovdan.lb.djnd.si
      secretName: danesjenovdan-tls
  rules:
    - host: danesjenovdan.lb.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danesjenovdan
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: danesjenovdan-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - files.danesjenovdan.lb.djnd.si
      secretName: danesjenovdan-nginx-tls
  rules:
    - host: files.danesjenovdan.lb.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danesjenovdan-nginx
                port:
                  number: 80
